--- a/Web/Bookworm.Web/Views/Book/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Upload.cshtml
@@ -7,7 +7,10 @@
 
 <partial name="PartialViews/_TitleCardPartial" />
 
-<form method="post" enctype="multipart/form-data" class="col-8 mx-auto d-flex justify-content-center flex-column">
+<form
+    method="post"
+    enctype="multipart/form-data"
+    class="col-8 mx-auto d-flex justify-content-center flex-column">
     <div asp-validation-summary="All" class="small text-danger mt-3 fs-4"></div>
     <div class="fs-4">
         <label asp-for="Title"></label>
@@ -17,14 +20,22 @@
     <div class="d-flex justify-content-center gap-3">
         <div class="mt-4 fs-4 w-50">
             <label asp-for="LanguageId"></label>
-            <select asp-for="LanguageId" size="8" aria-label="size 5 select example" class="fs-5 form-select border border-2">
+            <select
+                asp-for="LanguageId"
+                size="8"
+                aria-label="size 5 select example"
+                class="fs-5 form-select border border-2">
                 <vc:languages></vc:languages>
             </select>
             <span asp-validation-for="LanguageId" class="small text-danger"></span>
         </div>
         <div class="mt-4 fs-4 w-50">
             <label asp-for="CategoryId"></label>
-            <select asp-for="CategoryId" size="8" aria-label="size 5 select example" class="fs-5 form-select border border-2">
+            <select
+                asp-for="CategoryId"
+                size="8"
+                aria-label="size 5 select example"
+                class="fs-5 form-select border border-2">
                 <vc:categories></vc:categories>
             </select>
             <span asp-validation-for="CategoryId" class="small text-danger"></span>
@@ -58,7 +69,12 @@
     </div>
     <div class="mt-4" id="authorsContainer" data-index="0">
         <div id="alert-message"></div>
-        <button type="button" id="addAuthorBtn" class="btn button fs-5">Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i></button>
+        <button
+            type="button"
+            id="addAuthorBtn"
+            class="btn button fs-5">
+            Add Author<i class="fa-solid fa-square-plus ms-2 fa-xl"></i>
+        </button>
     </div>
     <div class="mt-4 fs-4">
         <label asp-for="Description"></label>
@@ -66,7 +82,11 @@
         <span asp-validation-for="Description" class="small text-danger"></span>
     </div>
     <div class="text-center mt-4 mb-5">
-        <button type="submit" class="btn button fs-5"><strong>Upload Book<i class="fas fa-upload icon ms-2"></i></strong></button>
+        <button
+            type="submit"
+            class="btn button fs-5">
+            <strong>Upload Book<i class="fas fa-upload icon ms-2"></i></strong>
+        </button>
     </div>
 </form>
 
