Implement book comment delete functionality

--- a/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -36,7 +36,7 @@
         <li class="list-group-item">
             <span>
                 Average Score: <span>@Model.RatingsAvg.ToString("f1")</span>
-                <span>/5</span>
+                <span>/5.0</span>
                 <span>(Ratings count: <span>@Model.RatingsCount</span>)</span>
             </span>
         </li>
@@ -91,42 +91,14 @@
             <h2>Comments: @Model.Comments.Count()</h2>
             @foreach (var comment in Model.Comments)
             {
-                <div class="modal fade"
-                     id="exampleModal"
-                     tabindex="-1"
-                     aria-labelledby="exampleModalLabel"
-                     aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Comment</h1>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to delete your comment?
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                                    Close
-                                </button>
-                                <a asp-controller="Comment"
-                                   asp-action="Delete"
-                                   asp-route-commentId=@comment.Id
-                                   asp-route-bookId=@Model.Id
-                                   type="button"
-                                   class="btn btn-danger">
-                                    Delete
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <article class="card">
                     <div class="card-header">
                         <span>Posted by - @comment.UserUserName</span>
                         @if (this.User.Identity.Name == comment.UserUserName)
                         {
                             <div>
-                                <button class="btn btn-lg btn-danger"
+                                <button class="btn btn-lg btn-danger modalBtn"
+                                        data-model-id=@comment.Id
                                         data-bs-toggle="modal"
                                         data-bs-target="#exampleModal">
                                     Delete
@@ -144,9 +116,35 @@
     }
 </section>
 
-
+<div class="modal fade"
+     id="exampleModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Comment</h1>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete your comment?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
+                    Close
+                </button>
+                <form method="post" asp-controller="Comment" asp-action="Delete">
+                    <input type="hidden" name="commentId" class="modelIdInput" value="" />
+                    <input type="hidden" name="bookId" value=@Model.Id />
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 @section Scripts {
+    <script src="~/js/modal.js"></script>
     <script src="/lib/tinymce/tinymce.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         tinymce.init({
