--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="d-flex justify-content-center mt-5">
-    <div class="card text-center title-card animate__animated animate__jackInTheBox">
+    <div class="card text-center title-card">
         <div class="card-body">
             <h2>@Model.CategoryName (@Model.BookCount)</h2>
         </div>
