--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <section class="welcomeSection mt-5">
-    <h1 class="text-center mb-5 animate__animated animate__jackInTheBox">Welcome to @GlobalConstants.SystemName!</h1>
+    <h1 class="text-center mb-5">Welcome to @GlobalConstants.SystemName!</h1>
     <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2 border-dark">
         <div class="card-header fs-4">
             Quote
@@ -40,12 +40,12 @@
 {
     <section class="homeBtnsSection">
         <div>
-            <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg animate__animated animate__pulse">
+            <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg">
                 Upload Book
             </a>
         </div>
         <div>
-            <a asp-controller="Quote" asp-action="Upload" class="btn button btn-lg animate__animated animate__pulse">
+            <a asp-controller="Quote" asp-action="Upload" class="btn button btn-lg">
                 Upload Quote
             </a>
         </div>
