Add custom mapping to CommentViewModel

--- a/Web/Bookworm.Web/wwwroot/css/books/bookDetails.css
+++ b/Web/Bookworm.Web/wwwroot/css/books/bookDetails.css
@@ -100,6 +100,13 @@
     padding-top: 2rem;
 }
 
+    .commentsSection .commentActionsContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+    }
+
     .commentsSection .card {
         width: 70%;
         border: solid 2px black;
@@ -117,18 +124,21 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                font-size: 2.5rem;
-                gap: 1rem;
+                gap: 0.5rem;
             }
 
-                .commentsSection .card .card-header .arrowsContainer i:hover {
-                    cursor: pointer;
+                .commentsSection .card .card-header .arrowsContainer i {
+                    font-size: 2.5rem;
                 }
 
-.upVoteArrow {
+                    .commentsSection .card .card-header .arrowsContainer i:hover {
+                        cursor: pointer;
+                    }
+
+.greenUpArrow {
     color: green;
 }
 
-.downVoteArrow {
+.redDownArrow {
     color: red;
 }
