--- a/Web/Bookworm.Web/Views/Book/Details.cshtml
+++ b/Web/Bookworm.Web/Views/Book/Details.cshtml
@@ -103,9 +103,9 @@
                         <span>Posted by - @comment.UserUserName</span>
                         @if (this.SignInManager.IsSignedIn(this.User))
                         {
-                            @if (this.User.Identity.Name == comment.UserUserName || this.User.IsInRole(GlobalConstants.AdministratorRoleName))
-                            {
-                                <div class="d-flex">
+                            <div class="commentActionsContainer">
+                                @if (this.User.Identity.Name == comment.UserUserName || this.User.IsInRole(GlobalConstants.AdministratorRoleName))
+                                {
                                     <button class="btn btn-lg btn-danger modalBtn"
                                             data-model-id=@comment.Id
                                             data-bs-toggle="modal"
@@ -119,17 +119,30 @@
                                             data-bs-target="#editModal">
                                         Edit
                                     </button>
-                                    
-                                </div>
-                            }
-                            @if (this.User.Identity.Name != comment.UserUserName)
-                            {
-                                <div class="arrowsContainer">
-                                    <i data-model-id=@comment.Id class="fas fa-circle-up"></i>
-                                    <span>@comment.NetWorth</span>
-                                    <i data-model-id=@comment.Id class="fas fa-circle-down"></i>
-                                </div>
-                            }
+                                }
+                                @if (this.User.Identity.Name != comment.UserUserName)
+                                {
+                                    <div class="arrowsContainer">
+                                        @if (@comment.VoteValue == 1)
+                                        {
+                                            <i onclick=onUpArrowClick(this) data-model-id=@comment.Id class="fas fa-circle-up greenUpArrow"></i>
+                                        }
+                                        else
+                                        {
+                                            <i onclick=onUpArrowClick(this) data-model-id=@comment.Id class="fas fa-circle-up"></i>
+                                        }
+                                        <span>@comment.NetWorth</span>
+                                        @if (@comment.VoteValue == -1)
+                                        {
+                                            <i onclick=onDownArrowClick(this) data-model-id=@comment.Id class="fas fa-circle-down redDownArrow"></i>
+                                        }
+                                        else
+                                        {
+                                            <i onclick=onDownArrowClick(this) data-model-id=@comment.Id class="fas fa-circle-down"></i>
+                                        }
+                                    </div>
+                                }
+                            </div>
                         }
                     </div>
                     <div class="card-body">
